css/master.css
/* ... */
#back2top p {
  position    : absolute;
  top         : 50%;
  width       : 100%;
  margin      : 0;
  text-align  : center;
  line-height : 48px;
  transform   : translateY(-50%);
}

#back2top p::before {
  content     : "\21E1";
  position    : relative;
  top         : 5px;
  right       : -5px;
  opacity     : 0;
  text-align  : right;
  font-size   : 2em;
  line-height : 0px;
  transition  : .2s ease-in-out;
}

#back2top p:hover::before {
  content  : "\21E1";
  position : relative;
  top      : 5px;
  right    : 5px;
  opacity  : 1;
}

#back2top:hover {
  color   : white;
  opacity : .9;
}

.move-left {
  transform : translateX(-200px);
}

#firstSlide {
  z-index    : 3;
  position   : relative;
  top        : 0;
  width      : 100%;
  height     : 700px;
  margin-top : 10px;
  background : #0b2b00;
}

#firstSlide::before {
  z-index             : -1;
  content             : "";
  opacity             : .85;
  background          : linear-gradient(
                          300deg,
                          transparent 30%,
                          rgba(0,0,0,.5) 90%
                        ),
                        url(
                          "../images/background3.jpg"
                        );
  background-repeat   : no-repeat;
  background-position : left;
  background-size     : cover;
  filter              : contrast(150%) grayscale(75%);
}

.history {
  z-index     : 1;
  position    : relative;
  font-family : "KlinicSlab-Bold";
  font-size   : 1.1em;
}

.container p,
li {
  text-shadow : 2px 2px 1px rgba(0, 0, 0, 0.5);
}

.container h2 {
  text-shadow : 1px 1px 1px rgba(0, 0, 0, 0.75),
                4px 4px 2px rgba(0, 0, 0, 0.5);
}

.container a {
  position : relative;
}

.container a:link {
  text-decoration : none;
  font-size       : 1.1em;
  transition      : .5s;
}

.container a::before {
  content            : "";
  visibility         : hidden;
  position           : absolute;
  bottom             : -3px;
  left               : 0;
  width              : 100%;
  height             : 2px;
  background-color   : unset;
  -webkit-transform  : scaleX(0);
  transform          : scaleX(0);
  -webkit-transition : all 0.3s ease-in-out 0s;
  transition         : all 0.3s ease-in-out 0s;
}

.container a::after {
  content      : "";
  display      : inline-block;
  position     : relative;
  left         : -5px;
  width        : 15px;
  height       : 15px;
  margin-right : 5px;
  opacity      : 0;
  transition   : .25s;
}

.container a:hover {}

.container a:hover:before {
  visibility        : visible;
  -webkit-transform : scaleX(1);
  transform         : scaleX(1);
}

.container a:hover::after {
  content      : url("../images/link.svg");
  display      : inline-block;
  position     : relative;
  left         : 5px;
  width        : 15px;
  height       : 15px;
  margin-right : 5px;
  opacity      : 1;
}

.history > p {
  margin-bottom : 20px;
  color         : white;
  font-size     : 1.25em;
}

.history > h2 {
  margin      : 0;
  color       : white;
  font-family : "Argent CF";
  font-size   : 3em;
}

.history > h2::after {
  content    : "";
  display    : block;
  width      : 150px;
  height     : 3px;
  margin     : 20px 0 10px;
  background : white;
}

.history > p:first-child {
  z-index        : 3;
  width          : 90%;
  margin         : 0;
  color          : white;
  text-transform : uppercase;
  font-family    : "proxima-nova-soft";
  font-size      : .9em;
  letter-spacing : 3px;
}

#about1 {
  z-index   : 3;
  position  : absolute;
  top       : 66%;
  left      : 33%;
  width     : 45%;
  height    : 700px;
  float     : left;
  transform : translate(-50%, -50%);
}

#about1 a:link {
  color : #72ff44;
}

#about1 a:visited {
  color : #72ff44;
}

#about1 a:hover {
  color : #a8ff8c;
}

#about1 a::before {
  background-color : #a8ff8c;
}

#about1 > p {
  width      : 90%;
  margin     : 35px 0 0;
  text-align : left;
}

#about1 > h2 {
  text-align : left;
}

#about1 > p:nth-child(3)::first-letter {
  float         : left;
  margin        : 0 5px 0 0;
  padding       : 0 0 0 5px;
  border        : 2px solid;
  border-right  : none;
  border-bottom : none;
  font-size     : 2em;
}

#about2 {
  z-index          : 5;
  position         : absolute;
  right            : 10%;
  width            : 35%;
  height           : 825px;
  float            : right;
  margin-top       : -100px;
  padding          : 50px 10px 20px;
  border-radius    : 20px;
  background-color : #3d3900;
  text-align       : center;
}

#about2::before {
  z-index             : -1;
  content             : "";
  opacity             : .85;
  border-radius       : 20px;
  background          : linear-gradient(
                          135deg,
                          rgba(0,0,0,.8) 15%,
                          transparent 50%,
                          rgba(0,0,0,.8) 80%
                        ),
                        url(
                          "../images/background5.jpg"
                        );
  background-position : 75% 0%;
  background-size     : auto;
  filter              : contrast(110%) grayscale(75%);
}

#about2 a:link {
  color : #f7fc2a;
}

#about2 a:visited {
  color : #f7fc2a;
}

#about2 a:hover {
  color : #fffdad;
}

#about2 a::before {
  background-color : #fffdad;
}

#about2 > p:first-child {
  text-align : right;
}

#about2 * {
  width : 90%;
}

#about2 h2 {
  margin    : 0 auto;
  font-size : 2.3em;
}

#about2 > h2::after {
  width  : 150px;
  margin : 20px auto;
}

#about2 > ul {
  z-index         : 5;
  position        : relative;
  width           : 90%;
  margin          : 50px auto 0;
  padding         : 0;
  color           : white;
  text-align      : left;
  font-family     : "KlinicSlab-Bold";
  font-size       : 1.25em;
  list-style-type : none;
}

#about2 > ul > li {
  margin : 40px auto;
}

#about2 > ul > li:before {
  content      : "\25E2";
  margin-right : 5px;
}
/* ... */

